# ssh_config_py

./: README.md  README_CN.md  pyproject.toml  test.yaml
src/ssh_config/: __init__.py  cli.py  core.py  parser.py
tests/: test_basic.py
