[project]
name = "ssh-config"
version = "0.1.0"
description = "A command-line utility for managing SSH configuration files. Convert between SSH config, YAML, and JSON formats."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    "pyyaml>=6.0.3",
    "typer>=0.24.1",
]

[project.urls]
Homepage = "https://github.com/your-username/ssh-config"
Repository = "https://github.com/your-username/ssh-config"

[project.scripts]
ssh-config = "ssh_config.__main__:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
